--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Weather Dashboard</title>
 </head>
 
 <body>
@@ -15,9 +14,30 @@
         <h1>Weather Dashboard</h1>
     </header>
 
- <main>
-     <div class="container">
+
+    <div class="container">
          <div class="row">
+
+        <!-- weather navigation -->
+        <div class="col-3 location-container">
+            <!-- search content -->
+            <div class="input-group mb-3">
+                Search For A City:
+                <form id="user-form">
+                    <div class="input-group mb-3">
+                        <input name="location" id="location" type="text" class="form-control" placeholder="Location" aria-label="city name" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary btn-primary" type="button" id="button-addon2"><span class="text-light oi oi-magnifying-glass"></span></button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- location search results -->
+            <div id="location-search-results">
+                <ul class="list-group">
+                  </ul>
+            </div>
+        </div>
 
         <!--Weather Info-->
             <div class=col-9 weather-content">
@@ -48,16 +68,8 @@
                 <h4>5 Day Forecast:</h4>
                 <div id="five-day-forecast" class="card-deck"></div>
             </div>
-
-         </div>
-     </div>
- </main>   
-
-
-
-
-
-
+        </div>
+     </div>  
 
 
 
