--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
@@ -65,11 +65,12 @@
 
             <!--Forecast-->
             <div class="day-weather">
-                <h4>5 Day Forecast:</h4>
+                <h5>5 Day Forecast:</h5>
                 <div id="five-day-forecast" class="card-deck"></div>
             </div>
         </div>
-     </div>  
+     </div> 
+   </div> 
 
 
 
