fixed more html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!--Weather Info-->
             <div class=col-9 weather-content">
-                <div class=main-weather list-group-item">
+                <div class="main-weather list-group-item">
                     <div class="row">
                         <h2 class="location-name" id="city-name"></h2>
                         <img class="icon" src="" id="icon"></img>
